--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <a href="#"><i class="icon-googleplus"></i></a>
                                     <a href="#"><i class="icon-dribbble2"></i></a>
                                 </p>
-                                <p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a><a href="#" class="btn btn-primary btn-outline">Download CV</a></p>
+                                <p><a href="#" class="btn btn-primary btn-outline">Download CV</a></p>
                             </div>
                         </div>
                     </div>
@@ -270,7 +270,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+                            <a href="work.html" class="work-img" style="background-image: url(images/Pepegardgif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>PepeGard</h2>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+                            <a href="work.html" class="work-img" style="background-image: url(images/Froggergif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Frogger</h2>
@@ -327,7 +327,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+                            <a href="work.html" class="work-img" style="background-image: url(images/MoleculeMobilegif.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Molecule Mobile App</h2>
@@ -372,17 +372,17 @@
                             <div class="col-md-12">
                                 <div class="article">
                                     <a href="blog.html" class="blog-img">
-                                        <img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+                                        <img class="img-responsive" src="images/SiameseNetwork.png" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
                                             <span class="read">Read more</h2>
 										</div>
 									</a>
-									<div class="desc">
-										<!--span class="meta">15, Feb 2018</span-->
-                                            <h2><a href="blog.html">Face Identification</a></h2>
-                                            <p>A Computer vision project to build a face identification system using Siamese Network</p>
-                                        </div>
+                                    <div class="desc">
+                                        <!--span class="meta">15, Feb 2018</span-->
+                                        <h2><a href="blog.html">Face Identification</a></h2>
+                                        <p>A Computer vision project to build a face identification system using Siamese Network</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                             <div class="col-md-12">
                                 <div class="article">
                                     <a href="blog.html" class="blog-img">
-                                        <img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
+                                        <img class="img-responsive" src="images/SentimentAnalysisPic1.png" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
                                             <span class="read">Read more</h2>
@@ -408,7 +408,7 @@
                             <div class="col-md-12">
                                 <div class="article">
                                     <a href="blog.html" class="blog-img">
-                                        <img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+                                        <img class="img-responsive" src="images/ImageProcessingCellPic1.jpg" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
                                             <span class="read">Read more</h2>
@@ -417,7 +417,7 @@
 									<div class="desc">
 										<!--span class="meta">15, Feb 2018</span-->
                                             <h2><a href="blog.html">Image Processing on plant cells</a></h2>
-                                            <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+                                            <p>An image processing project build to count the number of nucleus inside a plant cell's image by using image processing techniques</p>
                                         </div>
                                 </div>
                             </div>
