--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <a href="#"><i class="icon-googleplus"></i></a>
                                     <a href="#"><i class="icon-dribbble2"></i></a>
                                 </p>
-                                <p><a href="#" class="btn btn-primary btn-outline">Download CV</a></p>
+                                <p><a href="./images/KJCV.pdf" download class="btn btn-primary btn-outline">Download CV</a></p>
                             </div>
                         </div>
                     </div>
@@ -182,10 +182,11 @@
                                         <div class="services animate-box">
                                             <h3>1 - Unity Engine</h3>
                                             <ul>
-                                                <li>UI Design</li>
-                                                <li>Website &amp; Digital Design</li>
-                                                <li>Brading &amp; Visual Identity</li>
-                                                <li>Print Design</li>
+                                                <li>VR &amp; XR Environment</li>
+                                                <li>Photon Engine &amp; UNet</li>
+                                                <li>Animation &amp; CGI</li>
+                                                <li>Game Design</li>
+                                                <li>Computer Graphic</li>
                                             </ul>
                                         </div>
                                         <div class="services animate-box">
@@ -194,7 +195,7 @@
                                                 <li>HTML / CSS</li>
                                                 <li>JS &amp; Jquery Startup</li>
                                                 <li>WordPress</li>
-                                                <li>Jomla</li>
+                                                <li>Bootstrap</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -202,19 +203,29 @@
                                         <div class="services animate-box">
                                             <h3>2 - Machine Learning</h3>
                                             <ul>
-                                                <li>Editorial</li>
-                                                <li>Narrative</li>
-                                                <li>Motion Graphics</li>
-                                                <li>Animation</li>
-                                                <li>Visual Effects</li>
+                                                <li>TensorFlow</li>
+                                                <li>NLTK</li>
+                                                <li>Matplotlib</li>
+                                                <li>Pandas</li>
+                                                <li>Scikit-Learn</li>
+                                                <li>Keras</li>
                                             </ul>
                                         </div>
                                         <div class="services animate-box">
                                             <h3>4 - Computer Vision</h3>
                                             <ul>
-                                                <li>Sales Marketing</li>
-                                                <li>Invoice</li>
-                                                <li>eCommerce</li>
+                                                <li>OpenCV</li>
+                                                <li>Matplotlib</li>
+                                                <li>Keras</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="services animate-box">
+                                            <h3>5 - Data Science</h3>
+                                            <ul>
+                                                <li>Apache Spark</li>
+                                                <li>Big Data</li>
                                             </ul>
                                         </div>
                                     </div>
