First Clean I think

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
-                            </div>
+                            <!--div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+                            </div-->
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/Cryptocoinopolygif1.gif);">
+                            <a href="#" class="work-img" style="background-image: url(images/Cryptocoinopolygif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Cryptocoinopoly</h2>
@@ -281,7 +281,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/Pepegardgif1.gif);">
+                            <a href="#" class="work-img" style="background-image: url(images/Pepegardgif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>PepeGard</h2>
@@ -299,7 +299,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/Froggergif1.gif);">
+                            <a href="#" class="work-img" style="background-image: url(images/Froggergif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Frogger</h2>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/MoleculeVRgif1.gif);">
+                            <a href="#" class="work-img" style="background-image: url(images/MoleculeVRgif1.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Molecule VR</h2>
@@ -338,7 +338,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="work-entry animate-box">
-                            <a href="work.html" class="work-img" style="background-image: url(images/MoleculeMobilegif.gif);">
+                            <a href="#" class="work-img" style="background-image: url(images/MoleculeMobilegif.gif);">
                                 <div class="display-t">
                                     <div class="work-name">
                                         <h2>Molecule Mobile App</h2>
@@ -362,18 +362,18 @@
         <div id="colorlib-blog">
             <div class="container">
                 <div class="row text-center">
-                    <h2 class="bold">Blog</h2>
+                    <h2 class="bold">Projects</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-                        <span>Blog</span>
+                        <span>Projects</span>
                         <h2>Notable Projects</h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="rotate">
-                            <h2 class="heading">Our Blog</h2>
+                            <h2 class="heading">My Projects</h2>
                         </div>
                     </div>
                 </div>
@@ -382,7 +382,7 @@
                         <div class="item">
                             <div class="col-md-12">
                                 <div class="article">
-                                    <a href="blog.html" class="blog-img">
+                                    <a href="#" class="blog-img">
                                         <img class="img-responsive" src="images/SiameseNetwork.png" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
@@ -391,7 +391,7 @@
 									</a>
                                     <div class="desc">
                                         <!--span class="meta">15, Feb 2018</span-->
-                                        <h2><a href="blog.html">Face Identification</a></h2>
+                                        <h2><a href="#">Face Identification</a></h2>
                                         <p>A Computer vision project to build a face identification system using Siamese Network</p>
                                     </div>
                                 </div>
@@ -400,7 +400,7 @@
                         <div class="item">
                             <div class="col-md-12">
                                 <div class="article">
-                                    <a href="blog.html" class="blog-img">
+                                    <a href="#" class="blog-img">
                                         <img class="img-responsive" src="images/SentimentAnalysisPic1.png" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
@@ -418,7 +418,7 @@
                         <div class="item">
                             <div class="col-md-12">
                                 <div class="article">
-                                    <a href="blog.html" class="blog-img">
+                                    <a href="#" class="blog-img">
                                         <img class="img-responsive" src="images/ImageProcessingCellPic1.jpg" alt="html5 bootstrap by colorlib.com">
                                         <div class="overlay"></div>
                                         <div class="link">
@@ -498,7 +498,7 @@
                             <footer>
                                 <div id="footer">
                                     <div class="container">
-                                        <div class="row">
+                                        <!--div class="row">
                                             <div class="col-md-4 col-pb-sm">
                                                 <div class="row">
                                                     <div class="col-md-10">
@@ -548,7 +548,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div--->
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <p>
