--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>KJ Template</title>
+    <title>KJ Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -557,7 +557,7 @@
                                                     Copyright &copy;
                                                     <script>
                                                         document.write(new Date().getFullYear());
-                                                    </script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                                    </script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> | Modified by <a href="#">Tey Kai Jun</a>
                                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                                 </p>
                                             </div>
