removed ching chong

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                                 <div class="rotate">
                                     <h2 class="heading">About</h2>
                                 </div>
-                                <p>Mr Ching Chong soon to be graduated Computer Science student at the University of Nottingham and a freelance software developer, with a long-term career goal of becoming a professional developer. I am proficient in C#,
-                                    Python and have experience in designing, game developing, machine learnings combined with soft skills such as time management, critical thinking, and socialling skills.
+                                <p>Computer Science with Artificial Intelligence graduate from the University of Nottingham and a freelance software developer, with a long-term career goal of becoming a professional developer. I am proficient in C#, Python
+                                    and have experience in designing, game developing, machine learnings combined with soft skills such as time management, critical thinking, and socialling skills.
                                 </p>
                                 <!--p class="colorlib-social-icons">
                                     <a href="#"><i class="bi bi-github"></i></a>
