added reference to cryptocoinopoly

--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
                                     <p>Cryptocoinopoly was created by network users by incorporate Cryptocurrency market. The game is available on GitHub but it requires players to print and play with a physical board. This version of Cryptocoinopoly is
                                         a hybrid of the existing Cryptocoinopoly and Monopoly. Players can experience classic land trading and modern cryptocurrency market in this game. The game exist as a mobile game and it supports multiplayer online.
                                         The game introduces a cryptocurrency market where it simulates the real-world cryptocurrency market where players can invest in anytime. Therefore, players have more options to earn money compared to the traditional
-                                        Monopoly playing rule.
+                                        Monopoly playing rule. The game was also published as a research paper that can be found by the reference: B. N. C. H. Sia et al., "CRYPTOCOINOPOLY: A Real Time Online Multiplayer Board Game," 2021 14th International
+                                        Conference on Advanced Computer Theory and Engineering (ICACTE), 2021, pp. 27-31, doi: 10.1109/ICACTE53799.2021.00012.
                                     </p>
                                     <p class="read"><a href="#">View details</a></p>
                                 </div>
