added slice it all, still need to improve video quality

--- a/index.html
+++ b/index.html
@@ -356,6 +356,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-12">
+                        <div class="work-entry animate-box">
+                            <a href="#" class="work-img" style="background-image: url(images/SliceItAllKJShortVideo.gif);">
+                                <div class="display-t">
+                                    <div class="work-name">
+                                        <h2>Slice it All</h2>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col-md-4 col-md-offset-4">
+                                <div class="desc">
+                                    <p>This is a replication of the current trending game: Slice it All.
+                                    </p>
+                                    <p class="read"><a href="#">View details</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
