--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <a href="#"><i class="icon-googleplus"></i></a>
                                     <a href="#"><i class="icon-dribbble2"></i></a>
                                 </p-->
-                                <p><a href="./images/KJCV.pdf" download class="btn btn-primary btn-outline">Download CV</a></p>
+                                <p><a href="./images/KJResume.pdf" download class="btn btn-primary btn-outline">Download CV</a></p>
                             </div>
                         </div>
                     </div>
