--- a/index.html
+++ b/index.html
@@ -374,6 +374,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-12">
+                        <div class="work-entry animate-box">
+                            <a href="#" class="work-img" style="background-image: url(images/AStarAlgorithm.gif);">
+                                <div class="display-t">
+                                    <div class="work-name">
+                                        <h2>A* Pathfinding</h2>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col-md-4 col-md-offset-4">
+                                <div class="desc">
+                                    <p>This is a simulation on A* Pathfinding algorithm. The programme dynamically generates a map that consists of different types of tiles with different cost to travel through the tile. The programme allows user to select
+                                        two nodes and the A* algorithm will calculate and display the shortest path to travel to node.
+                                    </p>
+                                    <p class="read"><a href="#">View details</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
